@@ -106,14 +106,14 @@ has max_payload_size => (
   is => 'ro',
 );
 
-=head2 max_fragments_amount
+=head2 max_fragments
 
-The maximum fragments amount for received frames.  Currently defaults to whatever
+The maximum number of fragments for received frames.  Currently defaults to whatever
 L<Protocol::WebSocket> defaults to.
 
 =cut
 
-has max_fragments_amount => (
+has max_fragments => (
   is => 'ro',
 );
 
@@ -202,7 +202,7 @@ sub BUILD
 
   my $frame = Protocol::WebSocket::Frame->new(
     maybe max_payload_size => $self->max_payload_size,
-    maybe max_fragments_amount => $self->max_fragments_amount,
+    maybe max_fragments_amount => $self->max_fragments,
   );
 
   my $read_cb = sub {
